Webapp Logo added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta name="description" content="Transform lab learning with interactive virtual experiments. Practice hands-on chemistry and build real laboratory skills without equipment limitations." />
     <meta name="author" content="LabXperience" />
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/jpeg" href="/logo.jpg" />
+    <link rel="apple-touch-icon" href="/logo.jpg" />
+
     <meta property="og:title" content="LabXperience - Virtual Laboratory Learning Platform" />
     <meta property="og:description" content="Transform lab learning with interactive virtual experiments. Practice hands-on chemistry and build real laboratory skills without equipment limitations." />
     <meta property="og:type" content="website" />
